# OWLRayTracing

./: .gitignore  README.md  cpuoutput.txt  rtcoreoutput.txt
owl/: Context.cpp  Context.h  DeviceContext.cpp  impl.cpp
owl/cmake/: embed_ptx.cmake
owl/include/owl/: owl_host.h
ray-tri-intersection/: myrun  op.txt  out.ppm  raytri  raytri (copy).cpp  raytri.cpp
samples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/advanced/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/advanced/optix7course/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/cmdline/s01-simpleTriangles/: deviceCode.cu  hostCode.cpp
samples/cmdline/s04-rohan/: CMakeLists.txt  GeomTypes.h  barnesHutTree.cpp  barnesHutTree.h  bitmap.cpp  bitmap.h  deviceCode.cu  deviceCode_old.cu  hostCode.cpp  hostCode.cu  kernels.cu  kernels.h
samples/cmdline/s05-rtow/: GeomTypes.h  Materials.h  deviceCode.cu  hostCode.cpp
samples/cmdline/s06-rtow-mixedGeometries/: GeomTypes.h  README_TrueKNN.md  deviceCode.cu  hostCode.cpp  temp
samples/common/owlViewer/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/interactive/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/interactive/int01-simpleTriangles/: CTestTestfile.cmake  Makefile  cmake_install.cmake  hostCode.cpp  orig_hostCode.cpp
samples/interactive/int06-mixedGeometries/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/interactive/int10-texturedTriangles/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/interactive/int11-rotatingBoxes/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/interactive/int12-switchingTextureSets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
samples/s01-trueknn/: CMakeLists.txt  CTestTestfile.cmake  GeomTypes.h  Makefile  README.md  cmake_install.cmake  deviceCode.cu  hostCode.cpp  nearest_neighbor.code-workspace
samples/s02-rtdbscan/: CMakeLists.txt  CTestTestfile.cmake  GeomTypes.h  Makefile  ReadMe.md  cmake_install.cmake  deviceCode.cu  hostCode.cpp
(+54 files in other folders)
